--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@remix-run/node": "^2.15.1",
     "@remix-run/react": "^2.15.1",
     "@remix-run/serve": "^2.15.1",
-    "isbot": "^4.1.0"
+    "framer-motion": "^11.15.0",
+    "isbot": "^4.1.0",
+    "remix-themes": "^1.5.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.1",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
