--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "@remix-run/react": "^2.15.1",
     "@remix-run/serve": "^2.15.1",
     "framer-motion": "^11.15.0",
-    "isbot": "^4.1.0",
-    "remix-themes": "^1.5.1"
+    "remix-themes": "^1.5.1",
+    "source-map-support": "^0.5.21"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.1",
     "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/source-map-support": "^0.5.10",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.38.0",
