--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@remix-run/node": "^2.15.1",
     "@remix-run/react": "^2.15.1",
     "@remix-run/serve": "^2.15.1",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.15.0",
     "isbot": "^4",
     "remix-themes": "^1.5.1",
+    "resend": "^4.1.2",
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
