--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@netlify/functions": "^2.6.0",
+    "@netlify/neon": "^0.1.0",
     "@netlify/remix-adapter": "^2.3.1",
     "@remix-run/node": "^2.15.1",
     "@remix-run/react": "^2.15.1",
