feat(neon): neon backend configuration projects rebuild

--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@neondatabase/serverless": "^1.0.1",
     "@netlify/functions": "^2.6.0",
     "@netlify/neon": "^0.1.0",
     "@netlify/remix-adapter": "^2.3.1",
     "@remix-run/node": "^2.15.1",
     "@remix-run/react": "^2.15.1",
     "@remix-run/serve": "^2.15.1",
+    "dompurify": "^3.2.6",
     "dotenv": "^16.4.7",
     "framer-motion": "^11.15.0",
     "isbot": "^4",
