--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@remix-run/node": "^2.15.1",
     "@remix-run/react": "^2.15.1",
     "@remix-run/serve": "^2.15.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "dompurify": "^3.2.6",
     "dotenv": "^16.4.7",
     "framer-motion": "^11.15.0",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@remix-run/dev": "^2.15.1",
     "@tailwindcss/typography": "^0.5.15",
+    "@tsparticles/engine": "^3.9.1",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/source-map-support": "^0.5.10",
